# subtrack

./: .gitignore  FRONTEND_VERCEL_SETUP.md  GIT_SETUP.md  README.md
.cursor/plans/: subtrack-full-stack-saas-f2ce85a4.plan.md
backend/: .env.example  ALEMBIC_SETUP.md  MIGRATIONS.md  RAILWAY_CRON.md  REMINDERS_SETUP.md  pyproject.toml  requirements.txt  start.sh  subtrack.db  test_production_config.py  test_reminders_endpoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 9c457e853f0a_initial_migration_user_and_subscription_.py
backend/app/: main.py
backend/app/api/routes/: auth.py  internal.py  subscriptions.py
backend/app/core/: auth.py  email.py  scheduler.py  security.py
backend/app/db/: config.py  dependencies.py  session.py
backend/app/models/: __init__.py  subscription.py  user.py
backend/app/schemas/: __init__.py  subscription.py  user.py
backend/app/services/: reminders.py  subscriptions.py
backend/scripts/: run_migrations.sh
frontend/: .env.example  .gitignore  VERCEL_DEPLOYMENT.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: CategoryBreakdownChart.tsx  Layout.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx  PublicRoute.tsx  SpendingForecastChart.tsx  SubscriptionForm.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/store/: authStore.ts
frontend/src/utils/: chartData.ts
